--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "",
-    "test": "jest --silent --verbose"
+    "test": "jest --verbose"
   },
   "keywords": [],
   "author": "",
